# ParallelNeedlemanWunsch

./: .gitignore  README.md  pipeline.py  serial.py  testcases.py
lang_cpp/: CMakeLists.txt  helper.cpp  helper.h  pipeline.cpp  serial.cpp  testcases.cpp  testcases.h
lang_python/: requirements.txt
